--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,28 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+:root {
+  --background: #fff;
+  --foreground: #000;
+}
+.dark {
+  --background: #000;
+  --foreground: #fff;
+}
+html,
+body {
+  min-height: 100vh;
+  min-width: 100vw;
+  width: 100vw;
+  height: 100vh;
+  background: var(--background);
+  color: var(--foreground);
+  overflow: hidden;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+.bg-background {
+  background: var(--background);
+}
+.text-foreground {
+  color: var(--foreground);
+}
